<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MedAdd</class>
 <widget class="QDialog" name="MedAdd">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>350</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QDialog
{
	background-color: rgb(255, 255, 255);
}</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>9</x>
     <y>9</y>
     <width>299</width>
     <height>27</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
   </property>
   <property name="text">
    <string>Receiving a new Medecin</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>100</y>
     <width>321</width>
     <height>331</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label_2">
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Number (MED):</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_3">
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Name :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_4">
      <property name="styleSheet">
       <string notr="true">font: 16pt &quot;Snap ITC&quot;;</string>
      </property>
      <property name="text">
       <string>Benefit :</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="lineEdit">
      <property name="styleSheet">
       <string notr="true">QLineEdit
{
	border-top:none;
	border-rigth:none;
	border-left:none;	
	border-bottom:1px solid skyblue;
	font: 11pt &quot;Segoe Script&quot;;
}</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="Line" name="line">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>40</y>
     <width>416</width>
     <height>16</height>
    </rect>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
  </widget>
  <widget class="QWidget" name="horizontalLayoutWidget_2">
   <property name="geometry">
    <rect>
     <x>80</x>
     <y>460</y>
     <width>251</width>
     <height>51</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QPushButton" name="pushButton">
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
{
	font: 16pt &quot;Snap ITC&quot;;
}
QPushButton
{
	font: 16pt &quot;Snap ITC&quot;;

	background-color: rgb(255, 255, 255);
	color:rgb(0, 85, 255) ;
	border-color: rgb(0,85,255);
	border-style: solid 5px;
	border : 1px solid rgb(0,85,255);
	border-radius: 10px;
}
QPushButton:hover
{
border : 2px solid rgb(0,0,255);
color : rgb(0, 0, 255);
}
</string>
      </property>
      <property name="text">
       <string>Refuse</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="pushButton_2">
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
{
	/*font: 16pt &quot;Snap ITC&quot;;*/
}
QPushButton
{
	color: rgb(255, 255, 255);
	background-color: rgb(0, 85, 255) ;
	border-radius: 10px;
	font: 16pt &quot;Snap ITC&quot;;
}
QPushButton:hover
{
	/*background-color: rgb(255, 0, 127);*/
	background-color: rgb(255, 255, 255);
	color:  rgb(0, 85, 255) ;
	border-color:rgb(0, 85, 255) ;
	border-style: solid 5px;
	border : 1px solid rgb(0, 85, 255) ;
	border-radius: 10px;
}
</string>
      </property>
      <property name="text">
       <string>Accepted</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
